[project]
name = "multicaps"
version = "0.1.1"
description = "Universal CAPTCHA Solver for humans"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.2",
    "tox>=4.30.3",
]
